@@ -15,6 +15,8 @@
 - compat-29: Add ~delete-line~.
 - compat-29: Add ~with-narrowing~.
 - compat-29: Add ~buffer-local-set-state~ and ~buffer-local-restore-state~.
+- compat-29: Add ~use-region-beginning~ and ~use-region-end~.
+- compat-29: Add ~get-scratch-buffer-create~.
 
 * Release of "Compat" Version 29.1.2.0
 
